--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -1351,11 +1351,11 @@ img {
 
 #gpl_icon {
   width: 73.8px;
-  margin-bottom: 1%;
+  margin-bottom: 0%;
 }
 .gpl__icontext--block {
   position: relative;
-  top: 0px;
+  bottom: 9px;
   display: inline-block;
 }
 .visuallyhidden {
@@ -1494,59 +1494,56 @@ p.last {
     display: flex;
     flex-direction: column;
   }
+  .selection-icon {
+    right: 40px;
+  }
   .sliding-docs-toc.docs-toc {
     display: none;
   }
   .algolia-autocomplete {
     width: 84%;
-    top:20px;
+    top:16px;
     left:3%;
-    
-}
-/* .search-container {
-  position: absolute;
-  top: 13%;
-  left: 5%;
-  width:100%;
-} */
-
-#installation-selection .setup-selection {
-    width: 100%;
-    text-align: center;
-    min-height: auto;
-    display: flex;
-    flex-direction: column;
-    margin: 0px auto;
-    max-width: 350px;
-    width:350px;
-    padding-bottom: 5px;
-    border-radius: 5px;
-    align-items: center;
-}
-
-
-#installation-selection .radioContainer {
-    position: relative;
-    width: 100%;
-    height: 45px;
-    margin: 5px;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 3px;
-    background-color: #f2f2f2;
-    padding-left:140px;
-}
-#installation-selection input:checked~.checkmark:after {
-    top: 11px;
+    border: 1px solid #ccc;  
+  }
+  a.reference.external {
+    padding-bottom: 3px;
+    display: inline-block;
   }
 
+  #installation-selection .setup-selection {
+      width: 100%;
+      text-align: center;
+      min-height: auto;
+      display: flex;
+      flex-direction: column;
+      margin: 0px auto;
+      max-width: 350px;
+      padding-bottom: 5px;
+      border-radius: 5px;
+      align-items: center;
+  }
+
+
+  #installation-selection .radioContainer {
+      position: relative;
+      width: 100%;
+      height: 45px;
+      margin: 5px;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 3px;
+      background-color: #f2f2f2;
+      padding-left:90px;
+  }
+  
   #installation-selection .circle {
-      left: 90px;
+      left: 60px;
   }
 
   #installation-selection input:checked~.checkmark:after {
-      left: 90px;
-      bottom: 8px;
+      left: 60px;
+      top: 15px;
   }
 
   .docs-container h2 {
@@ -1560,6 +1557,8 @@ p.last {
 
 .mobile-local-toc {
     text-align: left;
+    padding-left: 25px;
+    width: 100%;
 }
 
 .mobile-local-toc.collapsed + ul{
@@ -1607,9 +1606,10 @@ p.last {
       width: 100%;
       padding: 0px 35px;
       height: 40px;
+      font-size: 14px;
   }
   #search-icon {
-    top:34px;
+    top:30px;
     left: 6%;
   }
   .right-sidebar-container {
@@ -1667,7 +1667,7 @@ p.last {
     display: block;
   }
   #search {
-    width: 220px;
+    width: 180px;
     padding-left: 25px;
     font-size: 16px;
     height:40px;
@@ -1935,7 +1935,7 @@ p.last {
     background-color: #fff0b8;
     margin: auto 16px;
     border-radius: 5px 0 0 5px;
-    padding: 6px 7px;
+    padding: 10px 7px;
     position: relative;
     top: 0;
     left: -15px;
@@ -2031,7 +2031,7 @@ p.last {
     top: 56px;
   }
   .topic h1 {
-    padding-bottom: 3px;
+    padding-bottom: 5px;
   }
   .logo {
     width: 180px;
